# end-to-end-chat-application

./: .gitignore  CMakeLists.txt  README.md
client/: main.cpp
include/: client.h  protocol.h  server.h
server/: main.cpp
src/: client.cpp  main.cpp  protocol.cpp  server.cpp
